--- a/style.css
+++ b/style.css
@@ -3,26 +3,22 @@ body {
   background: black;
 }
 
-#qa-block {
-  margin-top: 20px;
-}
-
 .box {
   padding: 10px;
   border: 1px solid #e75551;
 }
 
-.blue {
+.blue-box {
   background-color: #308dc0;
-  margin: 40px 20px;
+  margin: 20px 20px 40px;
   width: 350px;
   box-sizing: border-box;
 }
 
-.orange {
+.orange-box {
   background-color: #ffa500;
 }
 
-.grey {
+.grey-box {
   background-color: #ddd;
 }
